--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
 		<title>AngularJS • TodoMVC</title>
 		<link rel="stylesheet" href="node_modules/todomvc-common/base.css">
 		<link rel="stylesheet" href="node_modules/todomvc-app-css/index.css">
+    <link rel="stylesheet" type="text/css" href="styles/fonts.css">
+    <link rel="stylesheet" type="text/css" href="styles/main.css">
 		<style>[ng-cloak] { display: none; }</style>
 	</head>
 	<body>
+    <img src="images/logo.svg" class="logo">
 		<section id="todoapp" ng-controller="TodoCtrl">
 			<header id="header">
 				<h1>todos</h1>
