--- a/index.html
+++ b/index.html
@@ -3,55 +3,19 @@
 	<head>
 		<meta charset="utf-8">
 		<title>AngularJS • TodoMVC</title>
+    <!-- build:css styles/vendor.css -->
 		<link rel="stylesheet" href="node_modules/todomvc-common/base.css">
 		<link rel="stylesheet" href="node_modules/todomvc-app-css/index.css">
+    <!-- endbuild -->
+    <!-- build:css styles/main.css -->
     <link rel="stylesheet" type="text/css" href="styles/fonts.css">
     <link rel="stylesheet" type="text/css" href="styles/main.css">
+    <!-- endbuild -->
 		<style>[ng-cloak] { display: none; }</style>
 	</head>
 	<body>
     <img src="images/logo.svg" class="logo">
-		<section id="todoapp" ng-controller="TodoCtrl">
-			<header id="header">
-				<h1>todos</h1>
-				<form id="todo-form" ng-submit="addTodo()">
-					<input id="new-todo" placeholder="What needs to be done?" ng-model="newTodo" autofocus>
-				</form>
-			</header>
-			<section id="main" ng-show="todos.length" ng-cloak>
-				<input id="toggle-all" type="checkbox" ng-model="allChecked" ng-click="markAll(allChecked)">
-				<label for="toggle-all">Mark all as complete</label>
-				<ul id="todo-list">
-					<li ng-repeat="todo in todos | filter:statusFilter track by $index" ng-class="{completed: todo.completed, editing: todo == editedTodo}">
-						<div class="view">
-							<input class="toggle" type="checkbox" ng-model="todo.completed" ng-change="todoCompleted(todo)">
-							<label ng-dblclick="editTodo(todo)">{{todo.title}}</label>
-							<button class="destroy" ng-click="removeTodo(todo)"></button>
-						</div>
-						<form ng-submit="doneEditing(todo)">
-							<input class="edit" ng-trim="false" ng-model="todo.title" ng-blur="doneEditing(todo)" todo-escape="revertEditing(todo)" todo-focus="todo == editedTodo">
-						</form>
-					</li>
-				</ul>
-			</section>
-			<footer id="footer" ng-show="todos.length" ng-cloak>
-				<span id="todo-count"><strong>{{remainingCount}}</strong>
-					<ng-pluralize count="remainingCount" when="{ one: 'item left', other: 'items left' }"></ng-pluralize>
-				</span>
-				<ul id="filters">
-					<li>
-						<a ng-class="{selected: location.path() == '/'} " href="#/">All</a>
-					</li>
-					<li>
-						<a ng-class="{selected: location.path() == '/active'}" href="#/active">Active</a>
-					</li>
-					<li>
-						<a ng-class="{selected: location.path() == '/completed'}" href="#/completed">Completed</a>
-					</li>
-				</ul>
-				<button id="clear-completed" ng-click="clearCompletedTodos()" ng-show="remainingCount < todos.length">Clear completed</button>
-			</footer>
-		</section>
+		<section id="todoapp" ng-view></section>
 		<footer id="info">
 			<p>Double-click to edit a todo</p>
 			<p>Credits:
@@ -62,12 +26,17 @@
 			</p>
 			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 		</footer>
+    <!-- build:js js/vendor.js -->
 		<script src="node_modules/todomvc-common/base.js"></script>
-		<script src="node_modules/angular/angular.js"></script>
+    <script src="node_modules/angular/angular.js"></script>
+		<script src="node_modules/angular-route/angular-route.js"></script>
+    <!-- endbuild -->
+    <!-- build:js js/scripts.js -->
 		<script src="js/app.js"></script>
 		<script src="js/controllers/todoCtrl.js"></script>
 		<script src="js/services/todoStorage.js"></script>
 		<script src="js/directives/todoFocus.js"></script>
 		<script src="js/directives/todoEscape.js"></script>
+    <!-- endbuild -->
 	</body>
 </html>
